# algorithm-engineering

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  test.sh
cmake/: FindBoost.cmake_back
cmake/DownloadProject/: DownloadProject.cmake
data_structure/: graph.h
data_structure/io/: graph_io.cpp  graph_io.h
doc/: Interface.tex
framework/: debug.h
framework/colouring/: graph_colouring.cpp  graph_colouring.h  hca.cpp  hca.h
framework/colouring/crossover/: gpx.cpp  gpx.h
framework/colouring/init/: greedy_saturation.cpp  greedy_saturation.h  xrlf.cpp  xrlf.h
framework/colouring/ls/: tabu_search.cpp  tabu_search.h
framework/util/: graph_util.h
include/: debug.h
include/colouring/: graph_colouring.h  greedy_crossover.h  hca.h
include/colouring/crossover/: gpx.h
include/colouring/init/: greedy_saturation.h
include/colouring/ls/: tabu_search.h
include/data_structure/io/: graph_io.h
include/hca/: hca.h
include/util/: graph_util.h
input/: DSJC1000.1-sorted.graph  DSJC1000.5-sorted.graph  DSJC1000.9-sorted.graph  DSJC250.1-sorted.graph  DSJC250.5-sorted.graph  DSJC250.9-sorted.graph  DSJC500.1-sorted.graph  DSJC500.5-sorted.graph  DSJC500.9-sorted.graph  miles250-sorted.graph
input/xrlf/: 10.1.1.graph  10.1.10.graph  10.1.2.graph  10.1.3.graph  10.1.4.graph  10.1.5.graph  10.1.6.graph  10.1.7.graph  10.1.8.graph  10.1.9.graph  10.5.1.graph  10.5.10.graph  10.5.2.graph  10.5.3.graph  10.5.4.graph  10.5.5.graph  10.5.6.graph  10.5.7.graph  10.5.8.graph  10.5.9.graph  10.5.graph  10.9.1.graph  10.9.10.graph  10.9.2.graph  10.9.3.graph  10.9.4.graph  10.9.5.graph  10.9.6.graph  10.9.7.graph  10.9.8.graph  10.9.9.graph  100.1.1.graph  100.1.10.graph  100.1.2.graph  100.1.3.graph  100.1.4.graph  100.1.5.graph  100.1.6.graph  100.1.7.graph  100.1.8.graph  (+580 more)
micro_benchs/: CMakeLists.txt
micro_benchs/colouring/: graph_colouring_mb.cpp  hca_mb.cpp  xrlf_mb.cpp
scripts/: run_micro_bench.sh
src/colouring/: graph_colouring.cpp  greedy_crossover.cpp  hca.cpp
src/colouring/crossover/: gpx.cpp
src/colouring/init/: greedy_saturation.cpp
src/colouring/ls/: tabu_search.cpp
src/data_structure/io/: graph_io.cpp
src/hca/: graph_colouring.cpp  hca.cpp
src/util/: graph_util.cpp
tests/: CMakeLists.txt  main.cpp
tests/colouring/: graph_colouring_test.cpp  greedy_crossover_test.cpp  hca_test.cpp
tests/colouring/crossover/: gpx_test.cpp
tests/colouring/init/: greedy_saturation_test.cpp
tests/colouring/ls/: tabu_search_test.cpp
tests/framework/: framework_test.cpp  graph_colouring_test.cpp  hca_test.cpp
tests/framework/colouring/: graph_colouring_test.cpp  hca_test.cpp
tests/framework/colouring/crossover/: gpx_test.cpp
tests/framework/colouring/init/: greedy_saturation_test.cpp  xrlf_test.cpp
tests/io/: graph_io_test.cpp  graphio.cpp
tests/util/: graph_util_test.cpp
